...
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/anton"
        android:text="Plants by Water Intake"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/More"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Dragon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="58dp"
        android:text="Less Water"
        app:layout_constraintBottom_toTopOf="@+id/Average"
        app:layout_constraintEnd_toEndOf="@+id/Average"
        app:layout_constraintTop_toBottomOf="@+id/More"
        tools:text="Less Water" />

    <Button
...
